confirmationEmail() now writes an .txt file

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 WindowBuilderhelpEmail.txt
 WindowBuilder/.classpath
 WindowBuilder/src/windowBuilder/views/helpClassTest.java
+WindowBuilderpurchaseEmail.txt
+WindowBuilder/src/windowBuilder/views/purchaseEmail PSUDOCODE+EXAMPLE.txt
